--- a/src/index.css
+++ b/src/index.css
@@ -7,16 +7,23 @@ html, body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
+  position: relative;
 }
 
 /* Ensure all containers respect viewport width */
 * {
   box-sizing: border-box;
+  max-width: 100%;
 }
 
 /* Prevent any element from causing horizontal overflow */
 .container, .max-w-7xl, .w-full {
   max-width: 100vw;
+}
+
+/* Additional overflow prevention */
+body * {
+  max-width: 100%;
 }
 
 /* Hide scrollbar utility class */
